# ml-project

./: .gitignore  EBM_classifier.ipynb  EBM_regressor.ipynb  cross_validate.py  ebm_cross_validation_results.csv  main.py  part_1.py  plot.py  pyproject.toml  xgb_feature_importances.csv  xgb_test_set_predictions.csv
part 2/: best_params.txt  xgb_cross_validation_full_results.csv
